--- a/.github/workflows/npm-sdk.yml
+++ b/.github/workflows/npm-sdk.yml
@@ -19,7 +19,7 @@ jobs:
         run: bun install
 
       - name: Build SDK
-        run: bun run sdk
+        run: bun run orval
 
       - name: Publish to npm
         run: bun publish --cwd ./packages/yuno-demo-sdk
