Feat: Build ready, sdk fix

--- a/packages/yuno-demo-sdk/package.json
+++ b/packages/yuno-demo-sdk/package.json
@@ -1,11 +1,11 @@
 {
   "name": "yuno-demo-sdk-core",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Yuno core Sdk",
-  "main": "dist/index.js",
   "type": "module",
+  "main": "src/index.ts",
   "files": [
-    "dist"
+    "src"
   ],
   "publishConfig": {
     "access": "public"
