--- a/packages/yuno-demo-sdk-ui/package.json
+++ b/packages/yuno-demo-sdk-ui/package.json
@@ -1,17 +1,20 @@
 {
   "name": "yuno-demo-sdk-ui",
-  "version": "1.0.0",
-  "main": "ui.tsx",
-  "description": "UI components for Yuno",
-  "license": "MIT",
+  "version": "0.1.0",
+  "main": "src/index.tsx",
+  "description": "Yuno ui Sdk",
+  "files": [
+    "src/index.tsx"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
+  "type": "module",
   "dependencies": {
-    "@hookform/resolvers": "^5.2.2",
-    "@types/react": "^19.2.7",
-    "date-fns": "^4.1.0",
     "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "react-hook-form": "^7.68.0",
-    "sonner": "^2.0.7",
-    "zod": "^4.1.13"
+    "react-dom": "^19.2.3"
+  },
+  "devDependencies": {
+    "@types/react": "^19.2.7"
   }
 }
