--- a/packages/yuno-demo-sdk-ui/package.json
+++ b/packages/yuno-demo-sdk-ui/package.json
@@ -1,10 +1,18 @@
 {
   "name": "yuno-demo-sdk-ui",
   "version": "0.2.0",
-  "main": "src/index.tsx",
-  "description": "Yuno ui Sdk",
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.esm.js",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "files": [
-    "src/index.tsx"
+    "dist"
   ],
   "publishConfig": {
     "access": "public"
@@ -12,9 +20,14 @@
   "type": "module",
   "dependencies": {
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "date-fns": "^2.30.0"
   },
   "devDependencies": {
-    "@types/react": "^19.2.7"
+    "@types/react": "^19.2.7",
+    "typescript": "^5.0.0"
+  },
+  "scripts": {
+    "build": "tsc"
   }
 }
