--- a/packages/yuno-demo-sdk-ui/tsconfig.json
+++ b/packages/yuno-demo-sdk-ui/tsconfig.json
@@ -1,15 +1,15 @@
 {
   "compilerOptions": {
-    "outDir": "./dist",
-    "module": "esnext",
-    "target": "es2020",
+    "target": "ES2020",
+    "module": "ESNext",
+    "lib": ["ES2020", "DOM"],
     "jsx": "react-jsx",
-    "moduleResolution": "node",
-    "lib": ["es2020", "dom"],
     "declaration": true,
+    "outDir": "./dist",
     "strict": true,
-    "esModuleInterop": true,
+    "moduleResolution": "node",
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
-  }
+    "esModuleInterop": true
+  },
+  "include": ["src", "ui.tsx"]
 }
