--- a/.github/workflows/npm-ui.yml
+++ b/.github/workflows/npm-ui.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Install dependencies
         run: bun install
 
+      - name: Build package
+        run: bun run build --cwd ./packages/yuno-demo-sdk-ui
+
       - name: Publish to npm
         run: bun publish --cwd ./packages/yuno-demo-sdk-ui
         env:
